# vector

./: .gitignore  Cargo.toml  README.md  r1.vec  r2.vec  r3.vec  r3a.vec  review.vec  spec_test.vec  stdlib_test.vec  stdlib_test2.vec  stdlib_test3.vec  stdlib_test4.vec  test_math.vec  test_opt.vec  test_reduce.vec  test_reduce1.vec  test_reduce2.vec  test_reduce_inline.vec  test_reduce_var.vec  test_spec.vec
benches/: benchmarks.rs
examples/: countdown.vec  fib.vec
src/: lib.rs  main.rs
src/compiler/: chunk.rs  emit.rs  mod.rs  opcode.rs  optimize.rs
src/gc/: generational.rs  heap.rs  mod.rs  trace.rs
src/jit/: cache.rs  codegen.rs  inline_cache.rs  mod.rs  osr.rs  profile.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  expr.rs  mod.rs  stmt.rs
src/runtime/: array.rs  intern.rs  mod.rs  stdlib.rs  string.rs  table.rs  userdata.rs
src/vm/: debugger.rs  execute.rs  frame.rs  integration.rs  mod.rs  tagged_value.rs  value.rs
tests/: compiler_tests.rs  gc_tests.rs  integration_tests.rs  jit_tests.rs  lexer_tests.rs  parser_tests.rs  vm_tests.rs
